--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <div class="col-lg-8 mx-auto text-center">
                     <h2 class="mb-4 display-5 fw-bold">TanaPiyopiってどんな人？</h2>
                     <p class="lead">
-                        私、TanaPiyopiは個人開発者です。<br>
+                        私、TanaPiyopiは初心者🔰個人開発者です。<br>
                         「こんなアプリがあったらいいな」を、アプリにしたいと思っています。
                     </p>
                     <p>
