--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -91,7 +91,7 @@
 
 <h2>第１０条（お問い合わせ窓口）</h2>
 <p>本ポリシーに関するお問い合わせは，下記の連絡先までお願いいたします。</p>
-<p>Eメールアドレス：axe1lyze@gmail.com</p>
+<p>Eメールアドレス：tanapiyopi@icloud.com</p>
 
 <h2>第１１条（本サービスの利用規約）</h2>
 <p>本サービスから第三者のコンテンツへのアクセスが発生する場合、そのコンテンツの利用規約を遵守の上ご利用ください。</p>
